dist/1.0/bin/sample/retrieveUnpackaged/objects/OrderLine_Snapshot_Cache__c.object
<CustomObject>
    <fields>
        <fullName>Bundle__c</fullName>
        <label>Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capex_One_off_converted__c</fullName>
        <label>Capex One-off (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Reuseable_converted__c</fullName>
        <label>Capex Reuseable (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price_converted__c</fullName>
        <label>Monthly Recurring Price (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Price_converted__c</fullName>
        <label>Non Recurring Price (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_Monthly_converted__c</fullName>
        <label>Opex Monthly (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opex_One_off_converted__c</fullName>
        <label>Opex One-off (converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderLine_Status__c</fullName>
        <label>OrderLine Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Created_Date__c</fullName>
        <label>Order Line Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No.</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>OrderLine Snapshot Cash</label>
    <nameField>
        <label>OrderLine Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderLine Snapshots Cash</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>